--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "start": "node index.js"
   },
-
   "engines": {
     "node": "10.15.0"
   },
-
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cool-ascii-faces": "^1.3.4",
     "discord.js": "^11.4.2"
   }
 }
