--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": "10.15.0"
+    "node": ">=10.15.0",
+    "npm": ">=6.4.1"
   },
   "author": "",
   "license": "ISC",
