--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bot_zero",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -13,7 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "botact": "^2.4.2",
     "cool-ascii-faces": "^1.3.4",
-    "discord.js": "^11.4.2"
-  }
+    "discord.js": "^11.4.2",
+    "express": "^4.16.4"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ste11/Bot_zero.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Ste11/Bot_zero/issues"
+  },
+  "homepage": "https://github.com/Ste11/Bot_zero#readme",
+  "description": ""
 }
